crates/pulsus-traceql/tests/corpus/accept/string_escape_hex.traceql
{ name = "\x41\x7a" }
