crates/pulsus-traceql/tests/corpus/reject/string_raw_newline.traceql
{ name = "line1
line2" }
